[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Hammer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Plank.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/krona_one_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.944126, -0.156214, 0.290212, -0.00213161, 0.877627, 0.47934, -0.329578, -0.453176, 0.828257, 5.21327, 8.22012, 11.1553 )

[node name="Hammer" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 1.94805, 1.05682, 0.645869 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.43264, 6.6305, 10.1318 )
light_energy = 1.5
omni_range = 50.0

[node name="Plank" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 4.644 )

[node name="Plank2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 4.644 )
is_first = true

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 92.0
margin_top = 55.0
margin_right = 433.0
margin_bottom = 177.0
custom_fonts/normal_font = ExtResource( 3 )
text = "159"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_end" from="Hammer" to="." method="_on_Hammer_game_end"]
[connection signal="nail_hit" from="Hammer" to="." method="_on_Hammer_nail_hit"]
